--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1> Hello world </h1>
+<!DOCTYPE html>  
+<html>  
+<head>  
+    <title>Frame tag</title>  
+</head>  
+  <frameset cols="25%,50%,25%">  
+    <frame src="frame1.html" >  
+    <frame src="frame2.html">   
+    <frame src="frame3.html">  
+  </frameset>  
+</html>  
