--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>  
 <head>  
     <title>Frame tag</title>  
-</head>  
+
   <frameset cols="25%,50%,25%">  
-    <frame src="https://www.google.com/search?q=blank+picture+frame&tbm=isch&ved=2ahUKEwiKy6HTyebrAhV_lUsFHRtaCdMQ2-cCegQIABAC&oq=blank+&gs_lcp=ChJtb2JpbGUtZ3dzLXdpei1pbWcQARgBMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgQIABBDOgcIIxDqAhAnOgQIIxAnOgUIABCxAzoCCAA6BwgAELEDEENQ6ElYioYBYJqfAWgHcAB4AIAB1wOIAdobkgEHMi00LjYuMZgBAKABAbABBcABAQ&sclient=mobile-gws-wiz-img&ei=80teX8qFD_-qrtoPm7SlmA0&bih=733&biw=393&client=ms-android-xiaomi-rvo2&prmd=simvn#imgrc=VLd13p5sgFM-VM " >  
-    <frame src=" https://www.google.com/search?q=blank+picture+frame&tbm=isch&ved=2ahUKEwiKy6HTyebrAhV_lUsFHRtaCdMQ2-cCegQIABAC&oq=blank+&gs_lcp=ChJtb2JpbGUtZ3dzLXdpei1pbWcQARgBMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgQIABBDOgcIIxDqAhAnOgQIIxAnOgUIABCxAzoCCAA6BwgAELEDEENQ6ElYioYBYJqfAWgHcAB4AIAB1wOIAdobkgEHMi00LjYuMZgBAKABAbABBcABAQ&sclient=mobile-gws-wiz-img&ei=80teX8qFD_-qrtoPm7SlmA0&bih=733&biw=393&client=ms-android-xiaomi-rvo2&prmd=simvn#imgrc=uaKwE59kdFvjjM ">   
-    <frame src=" https://www.google.com/search?q=blank+picture+frame&tbm=isch&ved=2ahUKEwiKy6HTyebrAhV_lUsFHRtaCdMQ2-cCegQIABAC&oq=blank+&gs_lcp=ChJtb2JpbGUtZ3dzLXdpei1pbWcQARgBMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgQIABBDOgcIIxDqAhAnOgQIIxAnOgUIABCxAzoCCAA6BwgAELEDEENQ6ElYioYBYJqfAWgHcAB4AIAB1wOIAdobkgEHMi00LjYuMZgBAKABAbABBcABAQ&sclient=mobile-gws-wiz-img&ei=80teX8qFD_-qrtoPm7SlmA0&bih=733&biw=393&client=ms-android-xiaomi-rvo2&prmd=simvn#imgrc=uaKwE59kdFvjjM ">  
+   style="background-color:#ff9900;">
+  <h2 align="center">First frame (frame_1.html)</h2>
+
+  
   </frameset>  
 </html>  
