--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>  
 <html>  
-<head>  
-    <title>Frame tag</title>  
-
+    
+   <body>
   <frameset cols="25%,50%,25%">  
    style="background-color:#ff9900;">
   <h2 align="center">First frame (frame_1.html)</h2>
 
-  
-  </frameset>  
+     </frameset> 
+     </body>
+      
+
 </html>  
