--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <frameset cols="25%,50%,25%">  
    style="background-color:#ff9900;">
   <h2 align="center">First frame (frame_1.html)</h2>
+    
+     <style="background-color:#ffcc00;">
+      <align="center">Second frame (frame_2.html)</h2>
 
      </frameset> 
      </body>
