--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>  
     
    <body>
-  <frameset cols="25%,50%,25%">  
+  <frameset>
    style="background-color:#ff9900;">
   <h2 align="center">First frame (frame_1.html)</h2>
     
