--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
    <body>
   <frameset>
    style="background-color:#ff9900;">
-  <h2 align="center">First frame (frame_1.html)</h2>
+  <h2 align="center">First frame</h2>
     
      <style="background-color:#ffcc00;">
-      <align="center">Second frame (frame_2.html)</h2>
+      <align="center">Second frame</h2>
 
      </frameset> 
      </body>
