--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
    <body>
   <frameset>
-   style="background-color:#ff9900;">
+   <style="background-color:#ff9900;">
   <h2 align="center">First frame</h2>
     
      <style="background-color:#ffcc00;">
