--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     
    <body>
   <frameset>
-   <style="background-color:#ff9900;">
+   <style="background-color:RED;">
   <h2 align="center">First frame</h2>
     
-     <style="background-color:#ffcc00;">
-      < align="center">Second frame</h2>
+     <style="background-color:BLUE;">
+      <h2 align="center">Second frame</h2>
 
      </frameset> 
      </body>
