--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="achivements">
         <h1>Achivements:</h1>
         <ul>
-          <li> I have C-certifacate NCC(national cadet corps)</li>
+          <li> I have C-certifacate in NCC(national cadet corps)</li>
           
         </ul>		
   <div class="profile">
