--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="Education">
 		<ul>
             <h1>Education:</h1>
-		<li><p>Btech in compute secince and engineering at jawahaal nehuru technological univercity in annthapur 2019-2022</p></li>	
+		<li><p>Btech in computer secince and engineering at jawahaal nehuru technological univercity in annthapur 2019-2022</p></li>	
       <li><p> Diploma in computer sceince and engineering at sri venkatesawara govt polytechnic collage in 2016-2019 completed with 75%</p></li>
 	  <li>ssc in zp high school in chintalapalem 2015-2016 with 8.0 gpa</li>
 	  </ul>
@@ -71,7 +71,7 @@
 <div class="achivements">
         <h1>Achivements:</h1>
         <ul>
-          <li> I have C-certifacate in NCC(national cadet corps)</li>
+          <li> I have C-certifacate in NCC (national cadet corps)</li>
           
         </ul>		
   <div class="profile">
