--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+<a href="story.html" > story </a>
     <div class="container">
       <div class="header"style="text-align:center;">
         <h1>BIO DATA</h1>
